grammar/CppParser.py
# Generated from c:/Users/balac/Desktop/prog/cpp_to_uml/grammar/CppParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CppParser ( Parser ):

    grammarFileName = "CppParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'struct'", "'public'", "'private'", 
                     "'protected'", "'virtual'", "'static'", "'const'", 
                     "'volatile'", "'inline'", "'friend'", "'template'", 
                     "'namespace'", "'using'", "'typedef'", "'enum'", "'union'", 
                     "'override'", "'explicit'", "'extern'", "'mutable'", 
                     "'register'", "'auto'", "':'", "';'", "','", "'.'", 
                     "'->'", "'::'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'!'", "'&'", "'|'", "'^'", "'<<'", "'>>'", "'++'", 
                     "'--'", "'~'", "'?'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "STRUCT", "PUBLIC", "PRIVATE", 
                      "PROTECTED", "VIRTUAL", "STATIC", "CONST", "VOLATILE", 
                      "INLINE", "FRIEND", "TEMPLATE", "NAMESPACE", "USING", 
                      "TYPEDEF", "ENUM", "UNION", "OVERRIDE", "EXPLICIT", 
                      "EXTERN", "MUTABLE", "REGISTER", "AUTO", "COLON", 
                      "SEMICOLON", "COMMA", "DOT", "ARROW", "SCOPE", "LBRACE", 
                      "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", "MOD", "LT", 
                      "GT", "LE", "GE", "EQ", "NE", "AND", "OR", "NOT", 
                      "BITAND", "BITOR", "XOR", "LSHIFT", "RSHIFT", "INC", 
                      "DEC", "TILDE", "QUESTION", "INTEGER_LITERAL", "FLOATING_LITERAL", 
                      "CHARACTER_LITERAL", "STRING_LITERAL", "IDENTIFIER", 
                      "QUALIFIED_NAME", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "PREPROCESSOR", "OTHER", "TYPENAME", "OPERATOR" ]

    RULE_compilationUnit = 0
    RULE_translationUnit = 1
    RULE_namespaceDefinition = 2
    RULE_classDefinition = 3
    RULE_classKey = 4
    RULE_classInheritanceList = 5
    RULE_classInheritance = 6
    RULE_classBody = 7
    RULE_accessSpecifier = 8
    RULE_memberDeclaration = 9
    RULE_staticDeclaration = 10
    RULE_virtualDeclaration = 11
    RULE_friendDeclaration = 12
    RULE_templateDeclaration = 13
    RULE_templateParameterList = 14
    RULE_templateParameter = 15
    RULE_memberFunction = 16
    RULE_returnType = 17
    RULE_typeSpecifier = 18
    RULE_templateArgumentList = 19
    RULE_templateArgument = 20
    RULE_functionName = 21
    RULE_operatorName = 22
    RULE_operatorSymbol = 23
    RULE_parameterList = 24
    RULE_parameter = 25
    RULE_defaultValue = 26
    RULE_memberVariable = 27
    RULE_constructor = 28
    RULE_destructor = 29
    RULE_memberInitializerList = 30
    RULE_memberInitializer = 31
    RULE_argumentList = 32
    RULE_argument = 33
    RULE_inlineMethod = 34
    RULE_methodWithBody = 35
    RULE_methodBody = 36
    RULE_constructorBody = 37
    RULE_destructorBody = 38
    RULE_functionDefinition = 39
    RULE_functionBody = 40
    RULE_usingDeclaration = 41
    RULE_preprocessorDirective = 42

    ruleNames =  [ "compilationUnit", "translationUnit", "namespaceDefinition", 
                   "classDefinition", "classKey", "classInheritanceList", 
                   "classInheritance", "classBody", "accessSpecifier", "memberDeclaration", 
                   "staticDeclaration", "virtualDeclaration", "friendDeclaration", 
                   "templateDeclaration", "templateParameterList", "templateParameter", 
                   "memberFunction", "returnType", "typeSpecifier", "templateArgumentList", 
                   "templateArgument", "functionName", "operatorName", "operatorSymbol", 
                   "parameterList", "parameter", "defaultValue", "memberVariable", 
                   "constructor", "destructor", "memberInitializerList", 
                   "memberInitializer", "argumentList", "argument", "inlineMethod", 
                   "methodWithBody", "methodBody", "constructorBody", "destructorBody", 
                   "functionDefinition", "functionBody", "usingDeclaration", 
                   "preprocessorDirective" ]

    EOF = Token.EOF
    CLASS=1
    STRUCT=2
    PUBLIC=3
    PRIVATE=4
    PROTECTED=5
    VIRTUAL=6
    STATIC=7
    CONST=8
    VOLATILE=9
    INLINE=10
    FRIEND=11
    TEMPLATE=12
    NAMESPACE=13
    USING=14
    TYPEDEF=15
    ENUM=16
    UNION=17
    OVERRIDE=18
    EXPLICIT=19
    EXTERN=20
    MUTABLE=21
    REGISTER=22
    AUTO=23
    COLON=24
    SEMICOLON=25
    COMMA=26
    DOT=27
    ARROW=28
    SCOPE=29
    LBRACE=30
    RBRACE=31
    LPAREN=32
    RPAREN=33
    LBRACKET=34
    RBRACKET=35
    ASSIGN=36
    PLUS=37
    MINUS=38
    MULT=39
    DIV=40
    MOD=41
    LT=42
    GT=43
    LE=44
    GE=45
    EQ=46
    NE=47
    AND=48
    OR=49
    NOT=50
    BITAND=51
    BITOR=52
    XOR=53
    LSHIFT=54
    RSHIFT=55
    INC=56
    DEC=57
    TILDE=58
    QUESTION=59
    INTEGER_LITERAL=60
    FLOATING_LITERAL=61
    CHARACTER_LITERAL=62
    STRING_LITERAL=63
    IDENTIFIER=64
    QUALIFIED_NAME=65
    WS=66
    LINE_COMMENT=67
    BLOCK_COMMENT=68
    PREPROCESSOR=69
    OTHER=70
    TYPENAME=71
    OPERATOR=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CppParser.EOF, 0)

        def translationUnit(self):
            return self.getTypedRuleContext(CppParser.TranslationUnitContext,0)


        def getRuleIndex(self):
            return CppParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = CppParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 86
                self.translationUnit()


            self.state = 89
            self.match(CppParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespaceDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.NamespaceDefinitionContext)
            else:
                return self.getTypedRuleContext(CppParser.NamespaceDefinitionContext,i)


        def classDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(CppParser.ClassDefinitionContext,i)


        def usingDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.UsingDeclarationContext)
            else:
                return self.getTypedRuleContext(CppParser.UsingDeclarationContext,i)


        def preprocessorDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.PreprocessorDirectiveContext)
            else:
                return self.getTypedRuleContext(CppParser.PreprocessorDirectiveContext,i)


        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(CppParser.FunctionDefinitionContext,i)


        def getRuleIndex(self):
            return CppParser.RULE_translationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslationUnit" ):
                listener.enterTranslationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslationUnit" ):
                listener.exitTranslationUnit(self)




    def translationUnit(self):

        localctx = CppParser.TranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_translationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25478) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 35) != 0):
                self.state = 96
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [13]:
                    self.state = 91
                    self.namespaceDefinition()
                    pass
                elif token in [1, 2]:
                    self.state = 92
                    self.classDefinition()
                    pass
                elif token in [14]:
                    self.state = 93
                    self.usingDeclaration()
                    pass
                elif token in [69]:
                    self.state = 94
                    self.preprocessorDirective()
                    pass
                elif token in [7, 8, 9, 64, 65]:
                    self.state = 95
                    self.functionDefinition()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMESPACE(self):
            return self.getToken(CppParser.NAMESPACE, 0)

        def LBRACE(self):
            return self.getToken(CppParser.LBRACE, 0)

        def translationUnit(self):
            return self.getTypedRuleContext(CppParser.TranslationUnitContext,0)


        def RBRACE(self):
            return self.getToken(CppParser.RBRACE, 0)

        def IDENTIFIER(self):
            return self.getToken(CppParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CppParser.RULE_namespaceDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespaceDefinition" ):
                listener.enterNamespaceDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespaceDefinition" ):
                listener.exitNamespaceDefinition(self)




    def namespaceDefinition(self):

        localctx = CppParser.NamespaceDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namespaceDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(CppParser.NAMESPACE)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==64:
                self.state = 102
                self.match(CppParser.IDENTIFIER)


            self.state = 105
            self.match(CppParser.LBRACE)
            self.state = 106
            self.translationUnit()
            self.state = 107
            self.match(CppParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classKey(self):
            return self.getTypedRuleContext(CppParser.ClassKeyContext,0)


        def IDENTIFIER(self):
            return self.getToken(CppParser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(CppParser.LBRACE, 0)

        def classBody(self):
            return self.getTypedRuleContext(CppParser.ClassBodyContext,0)


        def RBRACE(self):
            return self.getToken(CppParser.RBRACE, 0)

        def COLON(self):
            return self.getToken(CppParser.COLON, 0)

        def classInheritanceList(self):
            return self.getTypedRuleContext(CppParser.ClassInheritanceListContext,0)


        def SEMICOLON(self):
            return self.getToken(CppParser.SEMICOLON, 0)

        def accessSpecifier(self):
            return self.getTypedRuleContext(CppParser.AccessSpecifierContext,0)


        def getRuleIndex(self):
            return CppParser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)




    def classDefinition(self):

        localctx = CppParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.classKey()
            self.state = 110
            self.match(CppParser.IDENTIFIER)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 111
                self.match(CppParser.COLON)
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 112
                    self.accessSpecifier()


                self.state = 115
                self.classInheritanceList()


            self.state = 118
            self.match(CppParser.LBRACE)
            self.state = 119
            self.classBody()
            self.state = 120
            self.match(CppParser.RBRACE)
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 121
                self.match(CppParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CppParser.CLASS, 0)

        def STRUCT(self):
            return self.getToken(CppParser.STRUCT, 0)

        def getRuleIndex(self):
            return CppParser.RULE_classKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassKey" ):
                listener.enterClassKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassKey" ):
                listener.exitClassKey(self)




    def classKey(self):

        localctx = CppParser.ClassKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classKey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassInheritanceListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classInheritance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.ClassInheritanceContext)
            else:
                return self.getTypedRuleContext(CppParser.ClassInheritanceContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CppParser.COMMA)
            else:
                return self.getToken(CppParser.COMMA, i)

        def getRuleIndex(self):
            return CppParser.RULE_classInheritanceList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassInheritanceList" ):
                listener.enterClassInheritanceList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassInheritanceList" ):
                listener.exitClassInheritanceList(self)




    def classInheritanceList(self):

        localctx = CppParser.ClassInheritanceListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classInheritanceList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.classInheritance()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 127
                self.match(CppParser.COMMA)
                self.state = 128
                self.classInheritance()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassInheritanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CppParser.IDENTIFIER, 0)

        def accessSpecifier(self):
            return self.getTypedRuleContext(CppParser.AccessSpecifierContext,0)


        def getRuleIndex(self):
            return CppParser.RULE_classInheritance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassInheritance" ):
                listener.enterClassInheritance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassInheritance" ):
                listener.exitClassInheritance(self)




    def classInheritance(self):

        localctx = CppParser.ClassInheritanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classInheritance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0):
                self.state = 134
                self.accessSpecifier()


            self.state = 137
            self.match(CppParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessSpecifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.AccessSpecifierContext)
            else:
                return self.getTypedRuleContext(CppParser.AccessSpecifierContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CppParser.COLON)
            else:
                return self.getToken(CppParser.COLON, i)

        def memberDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppParser.MemberDeclarationContext)
            else:
                return self.getTypedRuleContext(CppParser.MemberDeclarationContext,i)


        def getRuleIndex(self):
            return CppParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)




    def classBody(self):

        localctx = CppParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 3)) & ~0x3f) == 0 and ((1 << (_la - 3)) & 6953557824662078463) != 0):
                self.state = 143
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 4, 5]:
                    self.state = 139
                    self.accessSpecifier()
                    self.state = 140
                    self.match(CppParser.COLON)
                    pass
                elif token in [6, 7, 8, 9, 10, 11, 12, 19, 20, 21, 22, 23, 58, 64, 65]:
                    self.state = 142
                    self.memberDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(CppParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(CppParser.PRIVATE, 0)

        def PROTECTED(self):
            return self.getToken(CppParser.PROTECTED, 0)

        def getRuleIndex(self):
            return CppParser.RULE_accessSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessSpecifier" ):
                listener.enterAccessSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessSpecifier" ):
                listener.exitAccessSpecifier(self)




    def accessSpecifier(self):

        localctx = CppParser.AccessSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_accessSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def staticDeclaration(self):
            return self.getTypedRuleContext(CppParser.StaticDeclarationContext,0)


        def virtualDeclaration(self):
            return self.getTypedRuleContext(CppParser.VirtualDeclarationContext,0)


        def friendDeclaration(self):
            return self.getTypedRuleContext(CppParser.FriendDeclarationContext,0)


        def templateDeclaration(self):
            return self.getTypedRuleContext(CppParser.TemplateDeclarationContext,0)


        def memberFunction(self):
            return self.getTypedRuleContext(CppParser.MemberFunctionContext,0)


        def memberVariable(self):
            return self.getTypedRuleContext(CppParser.MemberVariableContext,0)


        def constructor(self):
            return self.getTypedRuleContext(CppParser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(CppParser.DestructorContext,0)


        def inlineMethod(self):
            return self.getTypedRuleContext(CppParser.InlineMethodContext,0)


        def methodWithBody(self):
            return self.getTypedRuleContext(CppParser.MethodWithBodyContext,0)


        def SEMICOLON(self):
            return self.getToken(CppParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CppParser.RULE_memberDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberDeclaration" ):
                listener.enterMemberDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberDeclaration" ):
                listener.exitMemberDeclaration(self)




    def memberDeclaration(self):

        localctx = CppParser.MemberDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_memberDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 150
                self.staticDeclaration()
                pass

            elif la_ == 2:
                self.state = 151
                self.virtualDeclaration()
                pass

            elif la_ == 3:
                self.state = 152
                self.friendDeclaration()
                pass

            elif la_ == 4:
                self.state = 153
                self.templateDeclaration()
                pass

            elif la_ == 5:
                self.state = 154
                self.memberFunction()
                pass

            elif la_ == 6:
                self.state = 155
                self.memberVariable()
                pass

            elif la_ == 7:
                self.state = 156
                self.constructor()
                pass

            elif la_ == 8:
                self.state = 157
                self.destructor()
                pass

            elif la_ == 9:
                self.state = 158
                self.inlineMethod()
                pass

            elif la_ == 10:
                self.state = 159
                self.methodWithBody()
                pass


            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 162
                self.match(CppParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StaticDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'
